--- a/barchart-udt-core/pom.xml
+++ b/barchart-udt-core/pom.xml
@@ -1,5 +1,12 @@
-<!-- Copyright (C) 2009-2012 Barchart, Inc. <http://www.barchart.com/> All 
-	rights reserved. Licensed under the OSI BSD License. http://www.opensource.org/licenses/bsd-license.php -->
+<!--
+
+    Copyright (C) 2009-2012 Barchart, Inc. <http://www.barchart.com/>
+
+    All rights reserved. Licensed under the OSI BSD License.
+
+    http://www.opensource.org/licenses/bsd-license.php
+
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
@@ -26,6 +33,7 @@
 
 	<properties>
 
+		<!-- build results -->
 		<target>${project.build.directory}</target>
 
 		<!-- c++ source repository -->
@@ -246,7 +254,7 @@
 								<path>barchart-udt-it/pom.xml</path>
 							</pomIncludes>
 							<goals>
-								<!-- goals for child maven invocation -->
+								<!-- goals for nested maven invocation -->
 								<goal>clean</goal>
 								<goal>install</goal>
 							</goals>
@@ -256,7 +264,7 @@
 								<id>integration-test</id>
 								<phase>integration-test</phase>
 								<goals>
-									<!-- goals for parent maven invocation -->
+									<!-- goals for this maven invocation -->
 									<goal>install</goal>
 									<goal>run</goal>
 								</goals>
@@ -267,7 +275,7 @@
 			</build>
 		</profile>
 
-		<!-- attach multi arch/os nar artifacts to the jar project -->
+		<!-- attach multi arch/os nar artifacts to this jar project -->
 		<profile>
 			<id>release-attach</id>
 			<properties>
@@ -282,6 +290,7 @@
 			<build>
 				<plugins>
 
+					<!-- collect nar artifacts -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-dependency-plugin</artifactId>
@@ -352,6 +361,7 @@
 						</executions>
 					</plugin>
 
+					<!-- attach nar artifacts -->
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>build-helper-maven-plugin</artifactId>
@@ -484,7 +494,7 @@
 			</build>
 		</profile>
 
-		<!-- native build configuration -->
+		<!-- native build invocation -->
 		<profile>
 			<id>nar</id>
 			<build>
@@ -567,7 +577,7 @@
 			</build>
 		</profile>
 
-		<!-- apply default formatting -->
+		<!-- apply default source formatting -->
 		<profile>
 			<id>format-source</id>
 			<build>
