--- a/barchart-udt-core/pom.xml
+++ b/barchart-udt-core/pom.xml
@@ -246,6 +246,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-invoker-plugin</artifactId>
+						<version>1.8</version>
 						<configuration>
 							<streamLogs>true</streamLogs>
 							<projectsDirectory>${basedir}/../.</projectsDirectory>
