remove ia32/amd64 for windows

--- a/barchart-udt-core/aol.properties
+++ b/barchart-udt-core/aol.properties
@@ -139,7 +139,7 @@ x86.Windows.linker=g++
 
 # options for g++ compiler front end
 x86.Windows.gpp.cpp.compiler=g++
-x86.Windows.gpp.cpp.defines=IA32 WIN32 _WIN32_WINNT=0x0501 __MINGW__
+x86.Windows.gpp.cpp.defines=WIN32 _WIN32_WINNT=0x0501 __MINGW__
 x86.Windows.gpp.cpp.options=-c -mconsole -mthreads -fexceptions -O2 -fno-strict-aliasing -fno-omit-frame-pointer
 x86.Windows.gpp.cpp.includes=
 x86.Windows.gpp.cpp.excludes=
@@ -167,7 +167,7 @@ amd64.Windows.linker=g++
 
 # options for g++ compiler front end
 amd64.Windows.gpp.cpp.compiler=g++
-amd64.Windows.gpp.cpp.defines=AMD64 WIN32 _WIN32_WINNT=0x0501 __MINGW__
+amd64.Windows.gpp.cpp.defines=WIN32 _WIN32_WINNT=0x0501 __MINGW__
 amd64.Windows.gpp.cpp.options=-c -mconsole -mthreads -fexceptions -O2 -fno-strict-aliasing -fno-omit-frame-pointer
 amd64.Windows.gpp.cpp.includes=
 amd64.Windows.gpp.cpp.excludes=
