netty socket channel

--- a/barchart-udt-netty4/pom.xml
+++ b/barchart-udt-netty4/pom.xml
@@ -27,6 +27,8 @@
 		<!-- http://search.maven.org/#search|ga|1|io.netty -->
 		<barchartNettyVersion>4.0.0.Alpha8</barchartNettyVersion>
 
+		<projectJavaVersion>1.7</projectJavaVersion>
+
 	</properties>
 
 	<dependencies>
