--- a/barchart-udt-netty4/pom.xml
+++ b/barchart-udt-netty4/pom.xml
@@ -22,7 +22,7 @@
 	<properties>
 
 		<!-- http://search.maven.org/#search|ga|1|barchart-udt-bundle -->
-		<barchartBundleVersion>2.0.0</barchartBundleVersion>
+		<barchartBundleVersion>2.1.0-SNAPSHOT</barchartBundleVersion>
 
 		<!-- http://search.maven.org/#search|ga|1|io.netty -->
 		<barchartNettyVersion>4.0.0.Alpha8</barchartNettyVersion>
@@ -33,6 +33,8 @@
 
 	<dependencies>
 
+		<!-- MAIN -->
+
 		<!-- contains wrapper and native libraries for all arch/os -->
 		<dependency>
 			<groupId>com.barchart.udt</groupId>
@@ -41,9 +43,10 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- netty -->
 		<dependency>
 			<groupId>io.netty</groupId>
-			<artifactId>netty</artifactId>
+			<artifactId>netty-transport</artifactId>
 			<version>${barchartNettyVersion}</version>
 			<scope>provided</scope>
 		</dependency>
@@ -59,6 +62,17 @@
 			<artifactId>logback-classic</artifactId>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- TEST -->
+
+		<!-- netty loggin handler -->
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-handler</artifactId>
+			<version>${barchartNettyVersion}</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
