--- a/barchart-udt-core/pom.xml
+++ b/barchart-udt-core/pom.xml
@@ -7,8 +7,6 @@
     http://www.opensource.org/licenses/bsd-license.php
 
 -->
-<!-- Copyright (C) 2009-2012 Barchart, Inc. <http://www.barchart.com/> All 
-	rights reserved. Licensed under the OSI BSD License. http://www.opensource.org/licenses/bsd-license.php -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
@@ -56,6 +54,8 @@
 	</properties>
 
 	<dependencies>
+	
+		<!-- MAIN -->
 
 		<!-- required logging api -->
 		<dependency>
@@ -71,11 +71,20 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- TEST -->
+
 		<!-- required testing framework -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<!-- use yammer metrics for benchmarks -->
+		<dependency>
+		    <groupId>com.yammer.metrics</groupId>
+		    <artifactId>metrics-core</artifactId>
+		    <version>2.2.0</version>
 		</dependency>
 
 	</dependencies>
