--- a/barchart-udt-core/src/main/c++/jni/.gitignore
+++ b/barchart-udt-core/src/main/c++/jni/.gitignore
@@ -11,7 +11,7 @@
 # they are platform-specific and should not be stored in SVN;
 # instead, they should be build on demand from corresponding *.java files;
 
-/com_barchart_udt_SocketUDT.h
-
 /javah
 
+/com_barchart_udt_CCC.h
+/com_barchart_udt_SocketUDT.h
