--- a/barchart-udt-core/pom.xml
+++ b/barchart-udt-core/pom.xml
@@ -23,7 +23,7 @@
 	<packaging>jar</packaging>
 
 	<url>https://github.com/barchart/barchart-udt</url>
-	<description>${project.parent.description} [ CORE ] </description>
+	<description>Barchart UDT [ CORE ]</description>
 
 	<scm>
 		<url>https://github.com/barchart/barchart-udt</url>
