--- a/barchart-udt-core/src/main/c++/udt/src/Makefile
+++ b/barchart-udt-core/src/main/c++/udt/src/Makefile
@@ -8,7 +8,7 @@ ifndef arch
    arch = IA32
 endif
 
-CCFLAGS = -fPIC -Wall -Wextra -D$(os) -finline-functions -O3 -fno-strict-aliasing -fvisibility=hidden
+CCFLAGS = -fPIC -Wall -Wextra -D$(os) -finline-functions -O3 -fno-strict-aliasing #-msse3
 
 ifeq ($(arch), IA32)
    CCFLAGS += -DIA32
