--- a/barchart-udt-netty4/pom.xml
+++ b/barchart-udt-netty4/pom.xml
@@ -65,7 +65,7 @@
 
 		<!-- TEST -->
 
-		<!-- netty loggin handler -->
+		<!-- netty logging handler -->
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-handler</artifactId>
@@ -73,6 +73,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- use yammer metrics for benchmarks -->
+		<dependency>
+			<groupId>com.yammer.metrics</groupId>
+			<artifactId>metrics-core</artifactId>
+			<version>2.2.0</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
