--- a/barchart-udt-netty4/pom.xml
+++ b/barchart-udt-netty4/pom.xml
@@ -22,7 +22,7 @@
 	<properties>
 
 		<!-- http://search.maven.org/#search|ga|1|barchart-udt-bundle -->
-		<barchartBundleVersion>2.1.0</barchartBundleVersion>
+		<barchartBundleVersion>2.2.0-SNAPSHOT</barchartBundleVersion>
 
 		<!-- http://search.maven.org/#search|ga|1|io.netty -->
 		<barchartNettyVersion>4.0.0.Beta1-SNAPSHOT</barchartNettyVersion>
@@ -35,6 +35,13 @@
 
 		<!-- MAIN -->
 
+		<!-- convenience dependency for IDE refactoring  -->
+		<dependency>
+			<groupId>com.barchart.udt</groupId>
+			<artifactId>barchart-udt-core</artifactId>
+			<version>${barchartBundleVersion}</version>
+			<scope>provided</scope>
+		</dependency>
 		<!-- contains wrapper and native libraries for all arch/os -->
 		<dependency>
 			<groupId>com.barchart.udt</groupId>
