--- a/barchart-udt-core/aol.properties
+++ b/barchart-udt-core/aol.properties
@@ -16,6 +16,37 @@
 #
 ##################################################################
 
+
+#
+# Linux ARM
+#
+
+arm.Linux.linker=g++
+
+# options for g++ compiler front end
+arm.Linux.gpp.cpp.compiler=g++
+arm.Linux.gpp.cpp.defines=ARM LINUX
+arm.Linux.gpp.cpp.options=-c -fPIC -pthread -fexceptions -O2 -fno-strict-aliasing -fno-omit-frame-pointer -Wall -Wextra
+arm.Linux.gpp.cpp.includes=
+arm.Linux.gpp.cpp.excludes=
+
+# options for gcc linker front end
+arm.Linux.gpp.linker.options=-shared -shared-libgcc -fPIC -fexceptions
+arm.Linux.gpp.linker.sysLibs=stdc++
+arm.Linux.gpp.linker.libs=
+
+arm.Linux.gpp.java.include=include;include/linux
+arm.Linux.gpp.java.runtimeDirectory=jre/lib/i386/client
+
+arm.Linux.gpp.lib.prefix=lib
+arm.Linux.gpp.shared.prefix=lib
+arm.Linux.gpp.static.extension=a
+arm.Linux.gpp.shared.extension=so
+arm.Linux.gpp.plugin.extension=so
+arm.Linux.gpp.jni.extension=so
+arm.Linux.gpp.executable.extension=
+
+
 #
 # Linux 32
 #
