--- a/barchart-udt-core/pom.xml
+++ b/barchart-udt-core/pom.xml
@@ -103,6 +103,14 @@
 		<!-- <scope>test</scope> -->
 		<!-- </dependency> -->
 
+		<!-- file util -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
