--- a/barchart-udt-core/aol.properties
+++ b/barchart-udt-core/aol.properties
@@ -8,14 +8,19 @@
 
 ##################################################################
 #
-# AOL (Architecture-OperatingSystem-Linker) Build Values 
+# AOL (Architecture-OperatingSystem-Linker) Build Values
+# 
+##################################################################
 #
 # note: maven-nar-plugin internally uses:
 # g++ front end for compiler phase and
 # gcc front end for linker phase of the build
 #
 ##################################################################
-
+#
+# this file is used both by NAR plug-in and run time library load 
+#
+##################################################################
 
 #
 # Linux ARM
@@ -130,7 +135,7 @@ i386.MacOSX.gpp.shared.prefix=lib
 i386.MacOSX.gpp.static.extension=a
 i386.MacOSX.gpp.shared.extension=dylib
 i386.MacOSX.gpp.plugin.extension=bundle
-i386.MacOSX.gpp.jni.extension=jnilib
+i386.MacOSX.gpp.jni.extension=dylib
 i386.MacOSX.gpp.executable.extension=
 
 #
@@ -179,6 +184,7 @@ x86.Windows.gpp.cpp.excludes=
 x86.Windows.gpp.linker.options=-shared -shared-libgcc -mthreads -fexceptions -Wl,--enable-auto-import -Wl,--kill-at -Wl,--add-stdcall-alias -Wl,--image-base,0x10000000
 x86.Windows.gpp.linker.sysLibs=stdc++ ws2_32
 x86.Windows.gpp.linker.libs=
+x86.Windows.gpp.linker.dependency=libgcc_s_sjlj-1.dll libstdc++-6.dll
 
 x86.Windows.gpp.java.include=include;include/win32
 x86.Windows.gpp.java.runtimeDirectory=lib
@@ -207,6 +213,7 @@ amd64.Windows.gpp.cpp.excludes=
 amd64.Windows.gpp.linker.options=-shared -shared-libgcc -mthreads -fexceptions -Wl,--enable-auto-import -Wl,--kill-at -Wl,--add-stdcall-alias -Wl,--image-base,0x10000000
 amd64.Windows.gpp.linker.sysLibs=stdc++ ws2_32
 amd64.Windows.gpp.linker.libs=
+amd64.Windows.gpp.linker.dependency=libgcc_s_sjlj_64-1.dll libstdc++_64-6.dll
 
 amd64.Windows.gpp.java.include=include;include/win32
 amd64.Windows.gpp.java.runtimeDirectory=lib
