use legacy jni extension on macosx

--- a/barchart-udt-core/aol.properties
+++ b/barchart-udt-core/aol.properties
@@ -135,7 +135,7 @@ i386.MacOSX.gpp.shared.prefix=lib
 i386.MacOSX.gpp.static.extension=a
 i386.MacOSX.gpp.shared.extension=dylib
 i386.MacOSX.gpp.plugin.extension=bundle
-i386.MacOSX.gpp.jni.extension=dylib
+i386.MacOSX.gpp.jni.extension=jnilib
 i386.MacOSX.gpp.executable.extension=
 
 #
