--- a/barchart-udt-core/pom.xml
+++ b/barchart-udt-core/pom.xml
@@ -160,6 +160,7 @@
 				<includes>
 					<include>**/*.so</include>
 					<include>**/*.dylib</include>
+					<include>**/*.jnilib</include>
 					<include>**/*.dll</include>
 					<include>**/*.map</include>
 					<include>**/*.sym</include>
