--- a/barchart-udt-bundle/pom.xml
+++ b/barchart-udt-bundle/pom.xml
@@ -100,6 +100,13 @@
 											<groupId>${dependencyGroupId}</groupId>
 											<artifactId>${dependencyArtifactId}</artifactId>
 											<version>${dependencyVersion}</version>
+											<classifier>${arm}</classifier>
+											<type>nar</type>
+										</artifactItem>
+										<artifactItem>
+											<groupId>${dependencyGroupId}</groupId>
+											<artifactId>${dependencyArtifactId}</artifactId>
+											<version>${dependencyVersion}</version>
 											<classifier>${lin32}</classifier>
 											<type>nar</type>
 										</artifactItem>
