--- a/barchart-udt-core/aol.properties
+++ b/barchart-udt-core/aol.properties
@@ -171,12 +171,12 @@ x86.Windows.linker=g++
 # options for g++ compiler front end
 x86.Windows.gpp.cpp.compiler=g++
 x86.Windows.gpp.cpp.defines=WIN32 _WIN32_WINNT=0x0501 __MINGW__
-x86.Windows.gpp.cpp.options=-c -mconsole -mthreads -fexceptions -O2 -fno-strict-aliasing -fno-omit-frame-pointer
+x86.Windows.gpp.cpp.options=-m32 -c -mconsole -mthreads -fexceptions -O2 -fno-strict-aliasing -fno-omit-frame-pointer
 x86.Windows.gpp.cpp.includes=
 x86.Windows.gpp.cpp.excludes=
 
 # options for gcc linker front end
-x86.Windows.gpp.linker.options=-shared -shared-libgcc -mthreads -fexceptions -Wl,--enable-auto-import -Wl,--kill-at -Wl,--add-stdcall-alias -Wl,--image-base,0x10000000
+x86.Windows.gpp.linker.options=-m32 -shared -shared-libgcc -mthreads -fexceptions -Wl,--enable-auto-import -Wl,--kill-at -Wl,--add-stdcall-alias -Wl,--image-base,0x10000000
 x86.Windows.gpp.linker.sysLibs=stdc++ ws2_32
 x86.Windows.gpp.linker.libs=
 
